due to change in type of winDriveLetters (from Character to Path) need addtional adjustment